k8s/apps/base/adguard-home/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-home-dns
  namespace: adguard-home
  labels:
    app.kubernetes.io/name: adguard-home
    app.kubernetes.io/component: dns
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app.kubernetes.io/name: adguard-home
  ports:
    - name: dns-tcp
      port: 53
      targetPort: dns-tcp
      protocol: TCP
    - name: dns-udp
      port: 53
      targetPort: dns-udp
      protocol: UDP
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-home-web
  namespace: adguard-home
  labels:
    app.kubernetes.io/name: adguard-home
    app.kubernetes.io/component: web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: adguard-home
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
    - name: http-admin
      port: 80
      targetPort: http-admin
      protocol: TCP
